@@ -6,12 +6,10 @@ import com.thelarte.auth.entity.User;
 import com.thelarte.auth.entity.UserRole;
 import com.thelarte.auth.service.UserService;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/usuarios")
@@ -28,44 +26,54 @@ public class UsuarioController {
     public ResponseEntity<List<UserResponseDTO>> listarUsuarios() {
         List<UserResponseDTO> result = userService.findAll().stream()
                 .map(this::toDto)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(result);
     }
 
     // Obtener usuario por username
     @GetMapping("/{username}")
     public ResponseEntity<UserResponseDTO> getUsuario(@PathVariable String username) {
-        Optional<User> userOpt = userService.findByUsername(username);
-        if (userOpt.isEmpty()) return ResponseEntity.notFound().build();
-        return ResponseEntity.ok(toDto(userOpt.get()));
+        return userService.findByUsername(username)
+                .map(user -> ResponseEntity.ok(toDto(user)))
+                .orElseGet(() -> ResponseEntity.notFound().build());
     }
 
     // Editar usuario
     @PutMapping("/{username}")
     public ResponseEntity<UserResponseDTO> editarUsuario(
-            @PathVariable String username, @RequestBody UserEditDTO editDto) {
-        String newUsername = editDto.getUsername(); // Agrega username al DTO
-        Optional<User> userOpt = userService.updateUser(username, newUsername, editDto.getPassword(),
-                editDto.getRoles() != null ? editDto.getRoles().stream().map(UserRole::valueOf).toList() : null,
+            @PathVariable String username,
+            @RequestBody UserEditDTO editDto) {
+
+        Optional<User> updated = userService.updateUser(
+                username,
+                editDto.getUsername(),
+                editDto.getPassword(),
+                editDto.getRoles() != null
+                    ? editDto.getRoles().stream().map(UserRole::valueOf).toList()
+                    : null,
                 editDto.getActive()
         );
-        if (userOpt.isEmpty()) return ResponseEntity.notFound().build();
-        return ResponseEntity.ok(toDto(userOpt.get()));
+
+        return updated
+                .map(user -> ResponseEntity.ok(toDto(user)))
+                .orElseGet(() -> ResponseEntity.notFound().build());
     }
 
     // Eliminar usuario
     @DeleteMapping("/{username}")
     public ResponseEntity<Void> eliminarUsuario(@PathVariable String username) {
-        Optional<User> userOpt = userService.findByUsername(username);
-        if (userOpt.isEmpty()) return ResponseEntity.notFound().build();
-        userService.deleteByUsername(username);
-        return ResponseEntity.noContent().build();
+        return userService.findByUsername(username)
+                .map(u -> {
+                    userService.deleteByUsername(username);
+                    return ResponseEntity.<Void>noContent().build();
+                })
+                .orElseGet(() -> ResponseEntity.notFound().build());
     }
 
     // Mapper
     private UserResponseDTO toDto(User user) {
         List<String> roles = user.getRoles() != null
-                ? user.getRoles().stream().map(Enum::name).collect(Collectors.toList())
+                ? user.getRoles().stream().map(Enum::name).toList()
                 : List.of();
         return new UserResponseDTO(user.getId(), user.getUsername(), roles, user.isActive());
     }
